--- a/AUTHORS
+++ b/AUTHORS
@@ -571,6 +571,7 @@ Jasmine Ahuja                  <jasmine.ahuja11@gmail.com>
 Jasmine Ngan                   <jasmine.ngan@outlook.com>
 Jason A. Smith                 <smithj4@rpi.edu>
 Jason E. Stewart               <jason@openinformatics.com>
+Jason McIntosh                 <jmac@jmac.org>
 Jason Shirk
 Jason Stewart                  <jasons@cs.unm.edu>
 Jason Varsoke                  <jjv@caesun10.msd.ray.com>
